--- a/public/css/header.css
+++ b/public/css/header.css
@@ -4,24 +4,21 @@
   align-items: center;
   padding: 5px 20px;
   background-color: white;
-
-  a {
-    font-weight: bold;
-    color: #2c3e50;
-
-    &.router-link-exact-active {
-      color: #42b983;
-    }
-  }
+}
+.main-nav a {
+  font-weight: bold;
+  color: #2c3e50;
+}
+.main-nav a.router-link-exact-active {
+  color: #42b983;
 }
 
 .main-nav-item {
   text-decoration: none;
   margin-right: 0.5rem;
-
-  &:hover {
-    text-decoration: underline;
-  }
+}
+.main-nav-item:hover {
+  text-decoration: underline;
 }
 
 .main-nav-logo {
