MIse en place de redux Mise en place du login Mise en place du logout Mise en place de la recolte d'info user

--- a/src/main.scss
+++ b/src/main.scss
@@ -10,7 +10,7 @@
 
 @import "./pages/Login/login.scss";
 
-@import "./pages/User/user.scss";
+@import "./pages/Profile/profile.scss";
 
 html {
   font-family: Avenir, Helvetica, Arial, sans-serif;
