--- a/src/main.scss
+++ b/src/main.scss
@@ -12,6 +12,8 @@
 
 @import "./pages/Profile/profile.scss";
 
+@import "./components/Modal/modal.scss";
+
 html {
   font-family: Avenir, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
