--- a/src/main.scss
+++ b/src/main.scss
@@ -14,6 +14,8 @@
 
 @import "./components/Modal/modal.scss";
 
+@import "./components/FeaturesCard/FeaturesCard.scss";
+
 html {
   font-family: Avenir, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
